--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,6 @@
 #H2 Server Properties
+#Thu Jul 09 00:11:06 BST 2020
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./build/h2db/db/store|store
+webSSL=false
 webAllowOthers=true
 webPort=8082
-webSSL=false
