--- a/package.json
+++ b/package.json
@@ -23,17 +23,16 @@
     "@ngx-translate/core": "12.1.2",
     "@ngx-translate/http-loader": "5.0.0",
     "bootstrap": "4.5.0",
-    "jhipster-core": "^7.3.4",
     "moment": "2.27.0",
     "ng-jhipster": "0.14.0",
     "ngx-cookie-service": "3.0.4",
     "ngx-infinite-scroll": "9.0.0",
     "ngx-webstorage": "5.0.0",
     "rxjs": "6.5.5",
-    "sockjs-client": "1.4.0",
     "swagger-ui-dist": "3.25.1",
-    "tslib": "2.0.0",
+    "sockjs-client": "1.4.0",
     "webstomp-client": "1.2.6",
+    "tslib": "2.0.0",
     "zone.js": "0.10.3"
   },
   "devDependencies": {
@@ -45,7 +44,7 @@
     "@types/chai-string": "1.4.2",
     "@types/jest": "26.0.3",
     "@types/mocha": "7.0.2",
-    "@types/node": "^13.13.4",
+    "@types/node": "13.13.4",
     "@types/selenium-webdriver": "4.0.9",
     "@types/sockjs-client": "1.1.1",
     "@typescript-eslint/eslint-plugin": "2.30.0",
