removing faker as the required tag on the relationship made it impossible to work

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -51,7 +51,7 @@ spring:
     show-sql: true
   liquibase:
     # Remove 'faker' if you do not want the sample data to be loaded automatically
-    contexts: dev, faker
+    contexts: dev #, faker
   mail:
     host: localhost
     port: 25
@@ -68,7 +68,7 @@ server:
 # ===================================================================
 # JHipster specific properties
 #
-# Full reference is available at: https://www.jhipster.tech/common-application-properties/
+# Full reference is available20200706164551_added_entity_Customer.xml at: https://www.jhipster.tech/common-application-properties/
 # ===================================================================
 
 jhipster:
