--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@types/chai-string": "1.4.2",
     "@types/jest": "26.0.3",
     "@types/mocha": "7.0.2",
-    "@types/node": "13.13.4",
+    "@types/node": "^13.13.4",
     "@types/selenium-webdriver": "4.0.9",
     "@types/sockjs-client": "1.1.1",
     "@typescript-eslint/eslint-plugin": "2.30.0",
