--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -41,7 +41,10 @@
     "blueprints": [],
     "skipUserManagement": false,
     "skipClient": false,
-    "skipServer": false
+    "skipServer": false,
+    "herokuAppName": "mystorehooligan",
+    "herokuDeployType": "jar",
+    "herokuJavaVersion": "11"
   },
   "entities": ["Customer", "Invoice", "OrderItem", "Product", "ProductCategory", "ProductOrder", "Shipment"]
 }
